// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentTemplateEditAdd Add question to your section button should add new question 1`] = `
<DocumentFragment>
  <div
    class="ant-row-flex"
    style="margin: -5px -5px -5px -5px;"
  >
    <div
      class="ant-col ant-col-6"
      style="padding: 5px 5px 5px 5px;"
    >
      <div
        class="ant-card-wrapper"
        role="presentation"
      >
        <div
          class="ant-card ant-card-section-list ant-card-bordered"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Sections
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-list bg-white ant-list-custom m-0  ant-list-split"
              style="margin: 0px;"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <ul
                    class="ant-list-items"
                  >
                    <div
                      draggable="true"
                    >
                      <div
                        id="0"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item"
                        >
                          <div
                            class="flex-1 flex align-items-start overflow-hidden"
                          >
                            <svg
                              class="drag-icon"
                              height="24"
                              id="baseline-drag_indicator-24px"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0,0H24V24H0Z"
                                data-name="Path 242"
                                fill="none"
                                id="Path_242"
                              />
                              <path
                                d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                data-name="Path 243"
                                id="Path_243"
                              />
                            </svg>
                            <a
                              class="section-item-text flex-1 ant-typography-ellipsis ant-typography-ellipsis-single-line"
                              href="#"
                            />
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 14px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="mx-15"
            >
              <button
                ant-click-animating-without-extra-node="false"
                class="ant-btn ant-btn-dashed ant-btn-lg ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: plus"
                  class="anticon anticon-plus"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                    />
                    <path
                      d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                    />
                  </svg>
                </i>
                <span>
                  Add Section
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-18"
      style="padding: 5px 5px 5px 5px;"
    >
      <div
        class="ant-card-wrapper"
        role="presentation"
      >
        <div
          class="ant-card template-section-container ant-card-section-list ant-card-question-list ant-card-bordered"
          style="margin-bottom: 10px;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <i
                  aria-label="icon: exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  style="color: red; font-size: 16px; margin-right: 10px;"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                    />
                  </svg>
                </i>
                <span
                  class="ant-typography ant-typography-danger"
                  style="font-size: 14px;"
                >
                  Add a name and some questions
                </span>
                <div>
                  <span
                    class="ant-typography ant-typography-secondary"
                  >
                    Section Name
                  </span>
                </div>
                <span
                  class="ant-editable-input ant-input-affix-wrapper"
                  style="position: relative; display: block;"
                >
                  <input
                    class="ant-input"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span>
                      <i
                        aria-label="icon: enter"
                        class="anticon anticon-enter ant-editable-input__enter-icon"
                        style="position: absolute; right: 0px; top: 50%; transform: translate(0px, -50%);"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="enter"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 0 0 0 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </span>
                  </span>
                </span>
                <div
                  style="min-height: 13px; min-width: 1px;"
                />
                <span
                  class="ant-typography ant-typography-secondary"
                >
                  Description
                </span>
                <div
                  class="ant-typography ant-typography-edit-content"
                  style="font-size: 12px; white-space: pre-line; word-break: break-word;"
                >
                  <textarea
                    class="ant-input"
                    style="height: 0px; min-height: -9007199254740991px; max-height: 9007199254740991px; overflow-y: hidden; overflow-x: hidden;"
                  />
                  <i
                    aria-label="icon: enter"
                    class="anticon anticon-enter ant-typography-edit-content-confirm"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="enter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 0 0 0 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                class="ant-card-extra"
              >
                <div
                  class="ant-select-show-arrow ant-select ant-select-enabled"
                  style="width: 150px;"
                >
                  <div
                    aria-autocomplete="list"
                    aria-controls="test-uuid"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-select-selection
            ant-select-selection--single"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="ant-select-selection__rendered"
                    >
                      <div
                        class="ant-select-selection__placeholder"
                        style="display: none; user-select: none;"
                        unselectable="on"
                      >
                        type
                      </div>
                      <div
                        class="ant-select-selection-selected-value"
                        style="display: block; opacity: 1;"
                        title="DEFAULT"
                      >
                        DEFAULT
                      </div>
                      <div
                        class="ant-select-search ant-select-search--inline"
                        style="display: none;"
                      >
                        <div
                          class="ant-select-search__field__wrap"
                        >
                          <input
                            autocomplete="off"
                            class="ant-select-search__field"
                            value=""
                          />
                          <span
                            class="ant-select-search__field__mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <i
                        aria-label="icon: down"
                        class="anticon anticon-down ant-select-arrow-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </i>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-list bg-white ant-list-custom template-question-list ant-list-vertical ant-list-split"
              style="margin: 5px;"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <ul
                    class="ant-list-items"
                  >
                    <div
                      draggable="true"
                    >
                      <div
                        id="0"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item ant-list-item-no-flex"
                        >
                          <div
                            class="ant-row"
                            style="margin: -5px -5px -5px -5px;"
                          >
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <svg
                                class="drag-icon"
                                height="24"
                                id="baseline-drag_indicator-24px"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0,0H24V24H0Z"
                                  data-name="Path 242"
                                  fill="none"
                                  id="Path_242"
                                />
                                <path
                                  d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                  data-name="Path 243"
                                  id="Path_243"
                                />
                              </svg>
                              <span
                                class="ant-typography"
                                style="white-space: pre-line; word-break: break-word;"
                              >
                                Question 1
                              </span>
                            </div>
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <div
                                class="ant-checkbox-group"
                                style="width: 100%;"
                              >
                                <div
                                  class="ant-row"
                                  style="margin: -5px -5px -5px -5px;"
                                >
                                  <div
                                    class="ant-col ant-col-24"
                                    style="padding: 5px 5px 5px 5px;"
                                  >
                                    <label
                                      class="ant-checkbox-wrapper"
                                      style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                    >
                                      <span
                                        class="ant-checkbox"
                                      >
                                        <input
                                          class="ant-checkbox-input"
                                          type="checkbox"
                                          value=""
                                        />
                                        <span
                                          class="ant-checkbox-inner"
                                        />
                                      </span>
                                      <span>
                                        option 1
                                      </span>
                                    </label>
                                  </div>
                                  <div
                                    class="ant-col ant-col-24"
                                    style="padding: 5px 5px 5px 5px;"
                                  >
                                    <label
                                      class="ant-checkbox-wrapper"
                                      style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                    >
                                      <span
                                        class="ant-checkbox"
                                      >
                                        <input
                                          class="ant-checkbox-input"
                                          type="checkbox"
                                          value=""
                                        />
                                        <span
                                          class="ant-checkbox-inner"
                                        />
                                      </span>
                                      <span>
                                        option 2
                                      </span>
                                    </label>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 20px;"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                    <div
                      draggable="true"
                    >
                      <div
                        id="1"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item ant-list-item-no-flex"
                        >
                          <div
                            class="ant-row"
                            style="margin: -5px -5px -5px -5px;"
                          >
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <svg
                                class="drag-icon"
                                height="24"
                                id="baseline-drag_indicator-24px"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0,0H24V24H0Z"
                                  data-name="Path 242"
                                  fill="none"
                                  id="Path_242"
                                />
                                <path
                                  d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                  data-name="Path 243"
                                  id="Path_243"
                                />
                              </svg>
                              <span
                                class="ant-typography"
                                style="white-space: pre-line; word-break: break-word;"
                              >
                                Question 2
                              </span>
                            </div>
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <div
                                class="ant-radio-group ant-radio-group-outline"
                                style="width: 100%;"
                              >
                                <label
                                  class="ant-radio-wrapper"
                                  style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value="option 1"
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                  <span>
                                    option 1
                                  </span>
                                </label>
                                <label
                                  class="ant-radio-wrapper"
                                  style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value="option 2"
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                  <span>
                                    option 2
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 20px;"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                    <div
                      draggable="true"
                    >
                      <div
                        id="2"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item ant-list-item-no-flex"
                        >
                          <div
                            class="ant-row"
                            style="margin: -5px -5px -5px -5px; width: 100%;"
                          >
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <svg
                                class="drag-icon"
                                height="24"
                                id="baseline-drag_indicator-24px"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0,0H24V24H0Z"
                                  data-name="Path 242"
                                  fill="none"
                                  id="Path_242"
                                />
                                <path
                                  d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                  data-name="Path 243"
                                  id="Path_243"
                                />
                              </svg>
                              <span
                                class="ant-typography"
                                style="white-space: pre-line; word-break: break-word;"
                              >
                                Question 3
                              </span>
                            </div>
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <textarea
                                class="ant-input ant-input-disabled"
                                disabled=""
                                placeholder="Respondents will type their answers here."
                                style="width: 100%;"
                                type="textarea"
                              />
                            </div>
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 20px;"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                    <div
                      draggable="true"
                    >
                      <div
                        id="3"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item ant-list-item-no-flex"
                        >
                          <div
                            class="ant-row"
                            style="margin: -5px -5px -5px -5px;"
                          >
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <svg
                                class="drag-icon"
                                height="24"
                                id="baseline-drag_indicator-24px"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0,0H24V24H0Z"
                                  data-name="Path 242"
                                  fill="none"
                                  id="Path_242"
                                />
                                <path
                                  d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                  data-name="Path 243"
                                  id="Path_243"
                                />
                              </svg>
                              <span
                                class="ant-typography"
                                style="white-space: pre-line; word-break: break-word;"
                              >
                                Question 4
                              </span>
                            </div>
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <span
                                class=""
                              >
                                <div
                                  class="ant-upload ant-upload-select ant-upload-select-text"
                                >
                                  <span
                                    class="ant-upload"
                                    role="button"
                                    tabindex="0"
                                  >
                                    <input
                                      accept=""
                                      style="display: none;"
                                      type="file"
                                    />
                                    <button
                                      class="ant-btn"
                                      disabled=""
                                      type="button"
                                    >
                                      <i
                                        aria-label="icon: upload"
                                        class="anticon anticon-upload"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          class=""
                                          data-icon="upload"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 0 0-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                                          />
                                        </svg>
                                      </i>
                                      <span>
                                        Upload File
                                      </span>
                                    </button>
                                  </span>
                                </div>
                                <div
                                  class="ant-upload-list ant-upload-list-text"
                                />
                              </span>
                            </div>
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 20px;"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                    <div
                      draggable="true"
                    >
                      <div
                        id="4"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item ant-list-item-no-flex"
                        >
                          <div
                            class="ant-row"
                            style="margin: -5px -5px -5px -5px;"
                          >
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <svg
                                class="drag-icon"
                                height="24"
                                id="baseline-drag_indicator-24px"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0,0H24V24H0Z"
                                  data-name="Path 242"
                                  fill="none"
                                  id="Path_242"
                                />
                                <path
                                  d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                  data-name="Path 243"
                                  id="Path_243"
                                />
                              </svg>
                              <span
                                class="ant-typography"
                                style="white-space: pre-line; word-break: break-word;"
                              >
                                Question 5
                              </span>
                            </div>
                            <div
                              class="ant-col ant-col-24"
                              style="padding: 5px 5px 5px 5px;"
                            >
                              <div
                                class="ant-radio-group ant-radio-group-outline"
                                style="width: 100%;"
                              >
                                <label
                                  class="ant-radio-wrapper"
                                  style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value="yes"
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                  <span>
                                    yes
                                  </span>
                                </label>
                                <label
                                  class="ant-radio-wrapper"
                                  style="display: block; line-height: 30px; margin-right: 10px; white-space: pre-line; word-break: break-word;"
                                >
                                  <span
                                    class="ant-radio"
                                  >
                                    <input
                                      class="ant-radio-input"
                                      type="radio"
                                      value="no"
                                    />
                                    <span
                                      class="ant-radio-inner"
                                    />
                                  </span>
                                  <span>
                                    no
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 20px;"
                                tabindex="-1"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="ant-row"
              style="margin: -2.5px -2.5px -2.5px -2.5px;"
            >
              <div
                class="ant-col ant-col-24"
                style="padding: 2.5px 2.5px 2.5px 2.5px;"
              >
                <button
                  ant-click-animating-without-extra-node="false"
                  class="ant-btn ant-dropdown-trigger ant-btn-dashed ant-btn-lg ant-btn-block"
                  style=""
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    class="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                  <span>
                    Add question to your section
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentTemplateEditAdd Add section button should add new section. 1`] = `
<DocumentFragment>
  <div
    class="ant-row-flex"
    style="margin: -5px -5px -5px -5px;"
  >
    <div
      class="ant-col ant-col-6"
      style="padding: 5px 5px 5px 5px;"
    >
      <div
        class="ant-card-wrapper"
        role="presentation"
      >
        <div
          class="ant-card ant-card-section-list ant-card-bordered"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Sections
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-list bg-white ant-list-custom m-0  ant-list-split"
              style="margin: 0px;"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <ul
                    class="ant-list-items"
                  >
                    <div
                      draggable="true"
                    >
                      <div
                        id="0"
                      >
                        <li
                          class="ant-list-item ant-card-section-list-item"
                        >
                          <div
                            class="flex-1 flex align-items-start overflow-hidden"
                          >
                            <svg
                              class="drag-icon"
                              height="24"
                              id="baseline-drag_indicator-24px"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0,0H24V24H0Z"
                                data-name="Path 242"
                                fill="none"
                                id="Path_242"
                              />
                              <path
                                d="M11,18a2,2,0,1,1-2-2A2.006,2.006,0,0,1,11,18ZM9,10a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,10ZM9,4a2,2,0,1,0,2,2A2.006,2.006,0,0,0,9,4Zm6,4a2,2,0,1,0-2-2A2.006,2.006,0,0,0,15,8Zm0,2a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,10Zm0,6a2,2,0,1,0,2,2A2.006,2.006,0,0,0,15,16Z"
                                data-name="Path 243"
                                id="Path_243"
                              />
                            </svg>
                            <a
                              class="section-item-text flex-1 ant-typography-ellipsis ant-typography-ellipsis-single-line"
                              href="#"
                            />
                          </div>
                          <ul
                            class="ant-list-item-action"
                          >
                            <li>
                              <i
                                aria-label="icon: more"
                                class="anticon anticon-more ant-dropdown-trigger"
                                style="font-size: 14px;"
                              >
                                <svg
                                  aria-hidden="true"
                                  class=""
                                  data-icon="more"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M456 231a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0zm0 280a56 56 0 1 0 112 0 56 56 0 1 0-112 0z"
                                  />
                                </svg>
                              </i>
                            </li>
                          </ul>
                        </li>
                      </div>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
            <div
              class="mx-15"
            >
              <button
                ant-click-animating-without-extra-node="false"
                class="ant-btn ant-btn-dashed ant-btn-lg ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: plus"
                  class="anticon anticon-plus"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                    />
                    <path
                      d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                    />
                  </svg>
                </i>
                <span>
                  Add Section
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-18"
      style="padding: 5px 5px 5px 5px;"
    >
      <div
        class="ant-card-wrapper"
        role="presentation"
      >
        <div
          class="ant-card template-section-container ant-card-section-list ant-card-question-list ant-card-bordered"
          style="margin-bottom: 10px;"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <i
                  aria-label="icon: exclamation-circle"
                  class="anticon anticon-exclamation-circle"
                  style="color: red; font-size: 16px; margin-right: 10px;"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="exclamation-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 0 1 0-96 48.01 48.01 0 0 1 0 96z"
                    />
                  </svg>
                </i>
                <span
                  class="ant-typography ant-typography-danger"
                  style="font-size: 14px;"
                >
                  Add a name and some questions
                </span>
                <div>
                  <span
                    class="ant-typography ant-typography-secondary"
                  >
                    Section Name
                  </span>
                </div>
                <span
                  class="ant-editable-input ant-input-affix-wrapper"
                  style="position: relative; display: block;"
                >
                  <input
                    class="ant-input"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span>
                      <i
                        aria-label="icon: enter"
                        class="anticon anticon-enter ant-editable-input__enter-icon"
                        style="position: absolute; right: 0px; top: 50%; transform: translate(0px, -50%);"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="enter"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 0 0 0 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                          />
                        </svg>
                      </i>
                    </span>
                  </span>
                </span>
                <div
                  style="min-height: 13px; min-width: 1px;"
                />
                <span
                  class="ant-typography ant-typography-secondary"
                >
                  Description
                </span>
                <div
                  class="ant-typography ant-typography-edit-content"
                  style="font-size: 12px; white-space: pre-line; word-break: break-word;"
                >
                  <textarea
                    class="ant-input"
                    style="height: 0px; min-height: -9007199254740991px; max-height: 9007199254740991px; overflow-y: hidden; overflow-x: hidden;"
                  />
                  <i
                    aria-label="icon: enter"
                    class="anticon anticon-enter ant-typography-edit-content-confirm"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="enter"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M864 170h-60c-4.4 0-8 3.6-8 8v518H310v-73c0-6.7-7.8-10.5-13-6.3l-141.9 112a8 8 0 0 0 0 12.6l141.9 112c5.3 4.2 13 .4 13-6.3v-75h498c35.3 0 64-28.7 64-64V178c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
              <div
                class="ant-card-extra"
              >
                <div
                  class="ant-select-show-arrow ant-select ant-select-enabled"
                  style="width: 150px;"
                >
                  <div
                    aria-autocomplete="list"
                    aria-controls="test-uuid"
                    aria-expanded="false"
                    aria-haspopup="true"
                    class="ant-select-selection
            ant-select-selection--single"
                    role="combobox"
                    tabindex="0"
                  >
                    <div
                      class="ant-select-selection__rendered"
                    >
                      <div
                        class="ant-select-selection__placeholder"
                        style="display: none; user-select: none;"
                        unselectable="on"
                      >
                        type
                      </div>
                      <div
                        class="ant-select-selection-selected-value"
                        style="display: block; opacity: 1;"
                        title="DEFAULT"
                      >
                        DEFAULT
                      </div>
                      <div
                        class="ant-select-search ant-select-search--inline"
                        style="display: none;"
                      >
                        <div
                          class="ant-select-search__field__wrap"
                        >
                          <input
                            autocomplete="off"
                            class="ant-select-search__field"
                            value=""
                          />
                          <span
                            class="ant-select-search__field__mirror"
                          >
                             
                          </span>
                        </div>
                      </div>
                    </div>
                    <span
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <i
                        aria-label="icon: down"
                        class="anticon anticon-down ant-select-arrow-icon"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </i>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-row"
              style="margin: -2.5px -2.5px -2.5px -2.5px;"
            >
              <div
                class="ant-col ant-col-24"
                style="padding: 2.5px 2.5px 2.5px 2.5px;"
              >
                <button
                  class="ant-btn ant-dropdown-trigger ant-btn-dashed ant-btn-lg ant-btn-block"
                  type="button"
                >
                  <i
                    aria-label="icon: plus"
                    class="anticon anticon-plus"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="plus"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                      />
                      <path
                        d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                      />
                    </svg>
                  </i>
                  <span>
                    Add question to your section
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AssessmentTemplateEditAdd Assessment template edit page should match the snapshot. 1`] = `
<DocumentFragment>
  <div
    class="ant-row-flex"
    style="margin: -5px -5px -5px -5px;"
  >
    <div
      class="ant-col ant-col-6"
      style="padding: 5px 5px 5px 5px;"
    >
      <div
        class="ant-card-wrapper"
        role="presentation"
      >
        <div
          class="ant-card no-section-added ant-card-section-list ant-card-bordered"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                Sections
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-empty"
              style="margin: 10px;"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  height="152"
                  viewBox="0 0 184 152"
                  width="184"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <g
                      transform="translate(24 31.67)"
                    >
                      <ellipse
                        cx="67.797"
                        cy="106.89"
                        fill="#F5F5F7"
                        fill-opacity=".8"
                        rx="67.797"
                        ry="12.668"
                      />
                      <path
                        d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                        fill="#AEB8C2"
                      />
                      <path
                        d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                        fill="url(#linearGradient-1)"
                        transform="translate(13.56)"
                      />
                      <path
                        d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                        fill="#F5F5F7"
                      />
                      <path
                        d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                        fill="#DCE0E6"
                      />
                    </g>
                    <path
                      d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
                      fill="#DCE0E6"
                    />
                    <g
                      fill="#FFF"
                      transform="translate(149.65 15.383)"
                    >
                      <ellipse
                        cx="20.654"
                        cy="3.167"
                        rx="2.849"
                        ry="2.815"
                      />
                      <path
                        d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
                      />
                    </g>
                  </g>
                </svg>
              </div>
              <p
                class="ant-empty-description"
              >
                Add at least one Section
              </p>
            </div>
            <div
              class="mx-15"
            >
              <button
                class="ant-btn ant-btn-dashed ant-btn-lg ant-btn-block"
                type="button"
              >
                <i
                  aria-label="icon: plus"
                  class="anticon anticon-plus"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    data-icon="plus"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M482 152h60q8 0 8 8v704q0 8-8 8h-60q-8 0-8-8V160q0-8 8-8z"
                    />
                    <path
                      d="M176 474h672q8 0 8 8v60q0 8-8 8H176q-8 0-8-8v-60q0-8 8-8z"
                    />
                  </svg>
                </i>
                <span>
                  Add Section
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
